--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,16 +11,13 @@
         <div class="page-header">
             <h1><a href="/">Danny's Blog</a></h1>
         </div>
-                  {% block content %}
-                    {% for post in posts %}
-                        <div class="post">
-                            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-                            <div class="date">
-                                <p>published: {{ post.published_date }}</p>
-                            </div>
-                            <p>{{ post.text|linebreaksbr }}</p>
-                        </div>
-                    {% endfor %}
-                  {% endblock %}
+        <div class="content container">
+            <div class="row">
+                <div class="col-md-8">
+                {% block content %}
+                {% endblock %}
+                </div>
+            </div>
+        </div>
     </body>
 </html>
