--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,6 +9,10 @@
     </head>
     <body>
         <div class="page-header">
+            {% if user.is_authenticated %}
+              <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+              <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+            {% endif %}
             <h1><a href="/">Danny's Blog</a></h1>
         </div>
                   {% block content %}
@@ -19,6 +23,7 @@
                                 <p>published: {{ post.published_date }}</p>
                             </div>
                             <p>{{ post.text|linebreaksbr }}</p>
+                            <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.approved_comments.count }}</a>>
                         </div>
                     {% endfor %}
                   {% endblock %}
